--- a/templates/bpgtemplate.html
+++ b/templates/bpgtemplate.html
@@ -2,14 +2,9 @@
 <html>
 <head>
 
-<!-- FHH COMMENTED OUT
-<script	src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
--->
-
 <script>
 /*
-* show and hide descriptions for services
+* This will show and hide text related to various services that the user can access.
 */
 showHideDesc = function(id, ctx){
 var approvedNum = id;
@@ -35,7 +30,7 @@ if(document.getElementById(approvedNum).alt == "image of plus symbol"){
 </script>
 
  
-<title>USPS Business Customer Gateway</title>
+<title>USPS Business Partner Gateway</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 
@@ -75,15 +70,14 @@ if(document.getElementById(approvedNum).alt == "image of plus symbol"){
 											<img							
 											src="/images/USPS-BusinessPartnerGateway.png"
 											class="img-fluid" tabindex="16"
-											title="Link to Business Customer Gateway's Home Page"
-											alt="Image for Business Customer Gateway's Home Page link"
+											title="Link to Business Partner Gateway's Home Page"
+											alt="Image for Business Partner Gateway's Home Page link"
 											height="20px" />
 										</a>
 									</div>
 								</div>
 
 
-								<!-- span class="navbar-brand mb-0 pt-4 mt-5" >Business Customer Gateway</span> -->
 								<div class="row" style="float: right; margin-right: 3%;">
 									<div class="col-12">
 										<ul class="nav navbar-nav " id="navbar-display-name"
@@ -292,25 +286,6 @@ if(document.getElementById(approvedNum).alt == "image of plus symbol"){
 							</div>
 						</div>
 
-<!-- FHH COMMENTED OUT - remove locations dropdown
-						
-						<div class="row">
-							<div class="col-md-12" style="margin-left: 15px;">
-
-								
-									
-										
-									
-									<h5 class="serviceHeader" style="margin-top: 0;">Your
-										Locations:</h5>
-									<select tabindex="34" name="cridBox" onchange="submit();" style="width:98%; word-wrap:break-word;" title="Your Locations" class="wrapped-select">
-										<option value="ALL" selected="selected">All Locations</option>
-										<option value="6587123">HARRINGTON SOFTWARE ASSOCIATES, INC. (6587123), 7431 WILSON RD, WARRENTON, VA 20186-7464</option><option value="3765389">MATERIALS CUSTOMER SERVICE (3765389), 500 SW GARY ORMSBY DR, TOPEKA, KS 66624-9996</option><option value="8974561">USPS - MAIL ENTRY (8974561), 475 LENFANT PLZ SW RM 3660, WASHINGTON, DC 20260-0004</option>
-									</select>
-								
-							</div>
-						</div>
--->
 						<!-- Table include -->
 						<div class="row">
 							<div class="col-md-12" style="margin-left: 15px;">
@@ -681,7 +656,7 @@ if(document.getElementById(approvedNum).alt == "image of plus symbol"){
 									<div class="col-md-2 footer-link">
 										<h3>OTHER USPS SITES</h3>
 										<a href="https://gateway.usps.com" tabindex="9514"
-												title="Link to Business Customer Gateway" alt="Link to Business Customer Gateway">Business Customer
+												title="Link to Business Partner Gateway" alt="Link to Business Partner Gateway">Business Customer
 													Gateway </a><br>
 											<a href="https://postalinspectors.uspis.gov/"
 												tabindex="9515" title="Link to Postal Inspectors" alt="Link to Postal Inspectors">Postal Inspectors
@@ -711,20 +686,15 @@ if(document.getElementById(approvedNum).alt == "image of plus symbol"){
 			</div>
 </div>
 		<!-- End footer -->
-<!-- FHH COMMENTED OUT
-<link rel="stylesheet" href="https://gateway.usps.com/eAdmin/styles/footer.css" type="text/css" media="all" />
-<script type="text/javascript" src="https://gateway.usps.com:443https://gateway.usps.com/eAdmin/scripts/support.js"></script>
--->	
 
 				<!-- End footer -->
 			</div>
 		</div>
 	<div class="dijitHidden">
 		
-<!--  FHH ... set display: none for now on footer for wireframe -->	
 		<div id="timeOutDialogId" title="Warning:" data-dojo-type="dijit/Dialog" class="left clearfix"  style="display: none;">
 			<div class="bootstrap-iso">
-				<div class = "reviewRequestNote margin-bottom-30" style="">Your current BCG session will be logged out in one minute due to inactivity</div>
+				<div class = "reviewRequestNote margin-bottom-30" style="">Your current Business Partner Gateway session will be logged out in one minute due to inactivity</div>
 				<div class = "modal-buttons-div">
 					<span class="hasHover"> 
 						<a tabindex="1005" href="#" title="OK" class="btn btn-sm btn-primary" id="TimeOutCloseButtonId">OK</a>
